src/objects/et4ae5__UEBU__c.object
<CustomObject>
    <description>Deprecated</description>
    <fields>
        <fullName>et4ae5__BU__c</fullName>
        <label>Business Unit</label>
        <referenceTo>et4ae5__Business_Unit__c</referenceTo>
        <relationshipLabel>User Enabled Business Units</relationshipLabel>
        <relationshipName>User_Enabled_Business_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_ID__c</fullName>
        <formula>et4ae5__BU__r.et4ae5__Business_Unit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_Name__c</fullName>
        <formula>et4ae5__BU__r.et4ae5__Business_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Enabled__c</fullName>
        <formula>IF(et4ae5__BU__r.et4ae5__Enabled__c,&quot;true&quot;,&quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enabled</label>
        <type>Text</type>
    </fields>
    <label>User Enabled Business Unit</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Enabled Business Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>